--- a/index.html
+++ b/index.html
@@ -95,6 +95,19 @@
       background: #e0e0e0;
       color: var(--dark-blue);
     }
+    /* Canvas container */
+    #canvas-container {
+      display: flex;
+      justify-content: center;
+      margin: 3rem 1rem;
+    }
+    canvas {
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px var(--shadow-color);
+      max-width: 100%;
+      height: auto;
+    }
     .features {
       text-align: center;
       padding: 5rem 1rem;
@@ -206,6 +219,12 @@
     <p>Silzeycom delivers sleek consulting tools and smart analytics for modern cannabis brands.</p>
     <a href="#contact" class="btn">Get Started</a>
   </section>
+
+  <!-- Canvas Container -->
+  <section id="canvas-container">
+    <canvas id="myCanvas" width="600" height="400"></canvas>
+  </section>
+
   <section class="features" id="features">
     <div class="container">
       <h3>What Silzeycom Offers</h3>
@@ -214,36 +233,73 @@
         <a href="POS_Integration.html" class="card"><h4>POS Integration</h4><p>Connect sales systems with marketing tools seamlessly.</p></a>
         <a href="Email_Marketing.html" class="card"><h4>Email Marketing</h4><p>Engage your customers with beautiful campaigns.</p></a>
         <a href="SMS_Campaigns.html" class="card"><h4>SMS Campaigns</h4><p>Reach your audience directly with text messaging.</p></a>
-        <a href="Consulting_Services.html" class="card"><h4>Consulting Services</h4><p>Get expert cannabis industry guidance and strategy.</p></a>
-        <a href="Brand_Design.html" class="card"><h4>Brand Design</h4><p>Create a unique, professional brand for your business.</p></a>
-        <a href="Ad_Campaigns.html" class="card"><h4>Ad Campaigns</h4><p>Run high-ROI campaigns across top ad platforms.</p></a>
-        <a href="SEO_Web_Presence.html" class="card"><h4>SEO & Web Presence</h4><p>Improve your online visibility effectively.</p></a>
-        <a href="Influencer_Collabs.html" class="card"><h4>Influencer Collabs</h4><p>Partner with trusted voices to expand your reach.</p></a>
-        <a href="Customer_Loyalty.html" class="card"><h4>Customer Loyalty</h4><p>Build long-term customer relationships with rewards.</p></a>
-        <a href="Data_Security.html" class="card"><h4>Data Security</h4><p>Keep your business and customer data safe and secure.</p></a>
-        <a href="Market_Research.html" class="card"><h4>Market Research</h4><p>Understand your market and stay ahead of trends.</p></a>
-        <a href="Reputation_Management.html" class="card"><h4>Reputation Management</h4><p>Protect and grow your online brand reputation.</p></a>
-        <a href="Affiliate_Programs.html" class="card"><h4>Affiliate Programs</h4><p>Launch affiliate partnerships to expand your network.</p></a>
-        <a href="CRM_Solutions.html" class="card"><h4>CRM Solutions</h4><p>Manage customer relationships with powerful tools.</p></a>
+        <a href="Consulting_Services.html" class="card"><h4>Consulting</h4><p>Expert advice tailored to your business goals.</p></a>
+        <a href="Compliance.html" class="card"><h4>Compliance Tools</h4><p>Stay up to date with regulations easily.</p></a>
       </div>
     </div>
   </section>
+
   <section class="about" id="about">
-    <h3>About Us</h3>
-    <p>Silzeycom is a modern marketing and consulting firm built to serve cannabis businesses of all sizes. Our mission is to simplify success with data-driven tools and expert services.</p>
+    <h3>About Silzeycom</h3>
+    <p>We are a team of marketing professionals dedicated to elevating cannabis dispensaries through technology and creativity.</p>
   </section>
+
   <section class="contact" id="contact">
     <h3>Contact Us</h3>
     <form>
-      <input type="text" placeholder="Your Name" required>
-      <input type="email" placeholder="Your Email" required>
-      <textarea rows="5" placeholder="Your Message" required></textarea>
-      <button class="btn" type="submit">Send Message</button>
+      <input type="text" placeholder="Your Name" required />
+      <input type="email" placeholder="Your Email" required />
+      <textarea rows="4" placeholder="Your Message" required></textarea>
+      <button type="submit" class="btn">Send Message</button>
     </form>
   </section>
+
   <footer>
     &copy; 2025 Silzeycom. All rights reserved.
   </footer>
+
+  <script>
+    // Canvas drawing example: animate a bouncing ball
+    const canvas = document.getElementById('myCanvas');
+    const ctx = canvas.getContext('2d');
+
+    let ball = {
+      x: 100,
+      y: 100,
+      radius: 20,
+      dx: 3,
+      dy: 3,
+      color: 'rgba(0, 170, 255, 0.8)'
+    };
+
+    function drawBall() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      ctx.beginPath();
+      ctx.arc(ball.x, ball.y, ball.radius, 0, Math.PI * 2);
+      ctx.fillStyle = ball.color;
+      ctx.fill();
+      ctx.closePath();
+    }
+
+    function update() {
+      drawBall();
+
+      ball.x += ball.dx;
+      ball.y += ball.dy;
+
+      // Bounce off left or right walls
+      if(ball.x + ball.radius > canvas.width || ball.x - ball.radius < 0) {
+        ball.dx = -ball.dx;
+      }
+      // Bounce off top or bottom walls
+      if(ball.y + ball.radius > canvas.height || ball.y - ball.radius < 0) {
+        ball.dy = -ball.dy;
+      }
+
+      requestAnimationFrame(update);
+    }
+
+    update();
+  </script>
 </body>
 </html>
-
