--- a/index.html
+++ b/index.html
@@ -6,11 +6,53 @@
   <title>{{TITLE}}</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap">
   <style>
-    body { font-family: 'Inter', sans-serif; margin: 0; padding: 2rem; background: #f5f5f7; color: #1d1d1f; }
-    header, footer { background: #fff; text-align: center; padding: 1.5rem 0; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
-    h1, h3 { color: #00aaff; }
-    p { line-height: 1.6; }
-    a { color: #0088cc; text-decoration: none; }
+    body {
+      font-family: 'Inter', sans-serif;
+      margin: 0;
+      padding: 2rem;
+      background: #cceeff;
+      color: #1d1d1f;
+    }
+    header, footer {
+      background: #fff;
+      text-align: center;
+      padding: 1.5rem 0;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+    h1, h3 {
+      color: #00aaff;
+    }
+    p {
+      line-height: 1.6;
+    }
+    a {
+      color: #0088cc;
+      text-decoration: none;
+    }
+    .banner {
+      position: sticky;
+      top: 0;
+      background: #0088cc;
+      color: white;
+      padding: 2rem;
+      text-align: center;
+      z-index: 1000;
+    }
+    .banner h2 {
+      margin: 0 0 0.5rem;
+    }
+    .banner p {
+      margin: 0 0 1rem;
+    }
+    .banner button {
+      padding: 0.75rem 1.5rem;
+      background-color: white;
+      color: #0088cc;
+      border: none;
+      border-radius: 5px;
+      font-weight: bold;
+      cursor: pointer;
+    }
     .card-grid {
       display: flex;
       flex-wrap: wrap;
@@ -32,8 +74,14 @@
       transform: translateY(-10px);
       box-shadow: 0 15px 40px rgba(0, 0, 0, 0.2);
     }
-    .card h4 { color: #0088cc; margin-bottom: 1rem; }
-    .card p { color: #333; font-size: 1rem; }
+    .card h4 {
+      color: #0088cc;
+      margin-bottom: 1rem;
+    }
+    .card p {
+      color: #333;
+      font-size: 1rem;
+    }
   </style>
 </head>
 <body>
@@ -43,6 +91,12 @@
       <a href="index.html">Home</a>
     </nav>
   </header>
+
+  <div class="banner">
+    <h2>Dispensary Marketing, Simplified</h2>
+    <p>Silzeycom delivers sleek consulting tools and smart analytics for modern cannabis brands.</p>
+    <button onclick="location.href='get-started.html'">Get Started</button>
+  </div>
 
   <section class="card-grid">
     <a href="analytics.html" class="card"><h4>Analytics</h4><p>Track growth with intelligent dashboards.</p></a>
@@ -65,42 +119,7 @@
   <footer>
     <p>&copy; 2025 Silzeycom. All rights reserved.</p>
   </footer>
-
-  <script>
-    const pages = [
-      "analytics", "pos-integration", "email-marketing", "sms-campaigns", "consulting-services",
-      "brand-design", "ad-campaigns", "seo-web", "influencer-collabs", "customer-loyalty",
-      "market-research", "social-strategy", "content-creation", "data-security", "event-promotion"
-    ];
-
-    const head = document.head.innerHTML;
-    const header = document.querySelector('header').outerHTML;
-    const footer = document.querySelector('footer').outerHTML;
-
-    pages.forEach(page => {
-      const html = `<!DOCTYPE html>
-<html lang="en">
-<head>
-  ${head}
-  <title>${page.replace(/-/g, ' ')}</title>
-</head>
-<body>
-  ${header}
-  <main style="padding: 2rem; text-align: center;">
-    <h2>${page.replace(/-/g, ' ').replace(/\b\w/g, c => c.toUpperCase())}</h2>
-    <p>Welcome to the ${page.replace(/-/g, ' ')} page. More content coming soon.</p>
-  </main>
-  ${footer}
-</body>
-</html>`;
-
-      const blob = new Blob([html], { type: "text/html" });
-      const a = document.createElement("a");
-      a.href = URL.createObjectURL(blob);
-      a.download = `${page}.html`;
-      a.click();
-    });
-  </script>
 </body>
 </html>
+
 
